--- a/final_project_2/data_cleaning/house.ipynb
+++ b/final_project_2/data_cleaning/house.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "9aa10dbd",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "8524496b",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
        "[119390 rows x 32 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "ac877198",
    "metadata": {},
    "outputs": [
@@ -698,7 +698,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "81ffbe48",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "fb01aa8a",
    "metadata": {},
    "outputs": [
@@ -781,7 +781,7 @@
        "(119390, 32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "299eb8ae",
    "metadata": {},
    "outputs": [],
@@ -819,6 +819,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7446d49b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "c9440736",
    "metadata": {},
    "source": [
@@ -827,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "923ddf84",
    "metadata": {},
    "outputs": [
@@ -869,7 +875,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "4b0c43a4",
    "metadata": {},
    "outputs": [
@@ -977,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "7a0c247e",
    "metadata": {},
    "outputs": [
@@ -987,7 +993,7 @@
        "(119390, 32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "2836f529",
    "metadata": {},
    "outputs": [],
@@ -1020,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "4475fb9f",
    "metadata": {},
    "outputs": [
@@ -1776,7 +1782,7 @@
        "total_of_special_requests                        1.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1822,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "90e13251",
    "metadata": {},
    "outputs": [],
@@ -1841,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "4209b4ce",
    "metadata": {},
    "outputs": [],
@@ -1859,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "aae28d87",
    "metadata": {},
    "outputs": [],
@@ -1880,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "4f6113b8",
    "metadata": {},
    "outputs": [
@@ -1890,7 +1896,7 @@
        "(119210, 32)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1909,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "0612e886",
    "metadata": {},
    "outputs": [
@@ -2215,7 +2221,7 @@
        "total_of_special_requests          0.0     0.00     1.0     5.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2223,6 +2229,12 @@
    "source": [
     "data3.describe().T"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d28d03da",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2240,7 +2252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "35491522",
    "metadata": {},
    "outputs": [
@@ -2376,7 +2388,7 @@
        "reservation_status_date  119210    926  2015-10-21    1460"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2387,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "7e8d98c4",
    "metadata": {},
    "outputs": [],
@@ -2400,7 +2412,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "id": "1ffde00a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "92fb29c7",
    "metadata": {},
    "outputs": [
@@ -2706,7 +2726,7 @@
        "total_of_special_requests          0.0     0.00     1.0     5.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2725,7 +2745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "6a44d730",
    "metadata": {},
    "outputs": [
@@ -2755,13 +2775,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "2ad8f9f6",
    "metadata": {},
    "outputs": [],
    "source": [
     "data3['reservation_status_date'] = pd.to_datetime(data3['reservation_status_date'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12b9b6f5",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2773,7 +2799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "c3cc588c",
    "metadata": {},
    "outputs": [],
@@ -2783,7 +2809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "7d49625b",
    "metadata": {},
    "outputs": [
@@ -2804,7 +2830,7 @@
        "Name: arrv_date, Length: 119210, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2815,7 +2841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "59ca4683",
    "metadata": {},
    "outputs": [
@@ -2834,7 +2860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "4c883fd7",
    "metadata": {},
    "outputs": [],
@@ -2846,7 +2872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "id": "3149b537",
    "metadata": {},
    "outputs": [
@@ -2866,7 +2892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "id": "a753e0e6",
    "metadata": {},
    "outputs": [
@@ -2909,7 +2935,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2929,7 +2955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "id": "f8b4e2d5",
    "metadata": {},
    "outputs": [],
@@ -2948,7 +2974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "9dec7ba2",
    "metadata": {},
    "outputs": [],
@@ -2958,8 +2984,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "ec2ed845",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data3.to_excel('hotel_cleaned.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "bd73baab",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>=' not supported between instances of 'str' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Volumes/Data_Backup/github/ibm_spss_modeler/final_project_2/data_cleaning/house.ipynb Cell 59'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Volumes/Data_Backup/github/ibm_spss_modeler/final_project_2/data_cleaning/house.ipynb#ch0000061?line=0'>1</a>\u001b[0m mask2 \u001b[39m=\u001b[39m (data3[\u001b[39m'\u001b[39;49m\u001b[39mis_canceled\u001b[39;49m\u001b[39m'\u001b[39;49m] \u001b[39m>\u001b[39;49m\u001b[39m=\u001b[39;49m \u001b[39m3\u001b[39;49m)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/common.py:70\u001b[0m, in \u001b[0;36m_unpack_zerodim_and_defer.<locals>.new_method\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m     <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/common.py?line=65'>66</a>\u001b[0m             \u001b[39mreturn\u001b[39;00m \u001b[39mNotImplemented\u001b[39m\n\u001b[1;32m     <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/common.py?line=67'>68</a>\u001b[0m other \u001b[39m=\u001b[39m item_from_zerodim(other)\n\u001b[0;32m---> <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/common.py?line=69'>70</a>\u001b[0m \u001b[39mreturn\u001b[39;00m method(\u001b[39mself\u001b[39;49m, other)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/arraylike.py:60\u001b[0m, in \u001b[0;36mOpsMixin.__ge__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m     <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/arraylike.py?line=57'>58</a>\u001b[0m \u001b[39m@unpack_zerodim_and_defer\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m__ge__\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/arraylike.py?line=58'>59</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__ge__\u001b[39m(\u001b[39mself\u001b[39m, other):\n\u001b[0;32m---> <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/arraylike.py?line=59'>60</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cmp_method(other, operator\u001b[39m.\u001b[39;49mge)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/series.py:5623\u001b[0m, in \u001b[0;36mSeries._cmp_method\u001b[0;34m(self, other, op)\u001b[0m\n\u001b[1;32m   <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/series.py?line=5619'>5620</a>\u001b[0m rvalues \u001b[39m=\u001b[39m extract_array(other, extract_numpy\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, extract_range\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m   <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/series.py?line=5621'>5622</a>\u001b[0m \u001b[39mwith\u001b[39;00m np\u001b[39m.\u001b[39merrstate(\u001b[39mall\u001b[39m\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[0;32m-> <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/series.py?line=5622'>5623</a>\u001b[0m     res_values \u001b[39m=\u001b[39m ops\u001b[39m.\u001b[39;49mcomparison_op(lvalues, rvalues, op)\n\u001b[1;32m   <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/series.py?line=5624'>5625</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_construct_result(res_values, name\u001b[39m=\u001b[39mres_name)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/array_ops.py:283\u001b[0m, in \u001b[0;36mcomparison_op\u001b[0;34m(left, right, op)\u001b[0m\n\u001b[1;32m    <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/array_ops.py?line=279'>280</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m invalid_comparison(lvalues, rvalues, op)\n\u001b[1;32m    <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/array_ops.py?line=281'>282</a>\u001b[0m \u001b[39melif\u001b[39;00m is_object_dtype(lvalues\u001b[39m.\u001b[39mdtype) \u001b[39mor\u001b[39;00m \u001b[39misinstance\u001b[39m(rvalues, \u001b[39mstr\u001b[39m):\n\u001b[0;32m--> <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/array_ops.py?line=282'>283</a>\u001b[0m     res_values \u001b[39m=\u001b[39m comp_method_OBJECT_ARRAY(op, lvalues, rvalues)\n\u001b[1;32m    <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/array_ops.py?line=284'>285</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/array_ops.py?line=285'>286</a>\u001b[0m     res_values \u001b[39m=\u001b[39m _na_arithmetic_op(lvalues, rvalues, op, is_cmp\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/array_ops.py:73\u001b[0m, in \u001b[0;36mcomp_method_OBJECT_ARRAY\u001b[0;34m(op, x, y)\u001b[0m\n\u001b[1;32m     <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/array_ops.py?line=70'>71</a>\u001b[0m     result \u001b[39m=\u001b[39m libops\u001b[39m.\u001b[39mvec_compare(x\u001b[39m.\u001b[39mravel(), y\u001b[39m.\u001b[39mravel(), op)\n\u001b[1;32m     <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/array_ops.py?line=71'>72</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m---> <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/array_ops.py?line=72'>73</a>\u001b[0m     result \u001b[39m=\u001b[39m libops\u001b[39m.\u001b[39;49mscalar_compare(x\u001b[39m.\u001b[39;49mravel(), y, op)\n\u001b[1;32m     <a href='file:///Users/ryoung/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/core/ops/array_ops.py?line=73'>74</a>\u001b[0m \u001b[39mreturn\u001b[39;00m result\u001b[39m.\u001b[39mreshape(x\u001b[39m.\u001b[39mshape)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/da622/lib/python3.10/site-packages/pandas/_libs/ops.pyx:107\u001b[0m, in \u001b[0;36mpandas._libs.ops.scalar_compare\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: '>=' not supported between instances of 'str' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "# mask2 = (data3['is_canceled'] >= 3) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "967b4aa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "per = data3.groupby(['company','is_canceled']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "b90da733",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "per.to_excel('cancelled_by_company.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4be10641",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2981,7 +3065,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
